04filebeat/docker_env/k8s/yaml/filebeat.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat-spring
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: tomcat-spring
    spec:
      containers:
      - image: filebeat:5.4.1-v3
        name: filebeat
        volumeMounts:
        - name: app-logs
          mountPath: /log
        - name: tomcat-spring
          mountPath: /etc/filebeat/
      - image: tomcat:spring
        name : tomcat-spring
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-logs
          mountPath: /data/tomcat/logs/
      volumes:
      - name: tomcat-spring
        configMap:
          name: tomcat-spring
      - name: app-logs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-spring
  labels:
    app: tomcat-spring
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: tomcat-spring
