04filebeat/docker_env/k8s/yaml/filebeat-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: filebeat-test
spec:
  rules:
  - host: k8s-nginx.pp100.net
    http:
      paths:
      - path: /
        backend:
          serviceName: filebeat-test
          servicePort: 80
